<<<<<<< HEAD
<resources>
    <string name="app_name">TimeTable</string>
    <string name="timetable">Timetable</string>
    <string name="homework">Homework</string>
    <string name="input_homework">Press to add homework reminders!</string>
    <string name="me">Me</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thur.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>
    <string name="class_name">class name</string>
    <string name="classroom">classroom</string>
    <string name="week">week</string>
    <string name="class_time">class_time</string>
    <string name="teacher">teacher</string>
    <string name="add_another_time">add another time</string>
    <string name="month">Month</string>
    <string name="save">Save</string>
    <string name="back">Return</string>
    <string name="add">+</string>
    <string name="instruction">Input correct website!</string>
    <string name="open">Open the website</string>
    <string name="job_name">Job name </string>
    <string name="job_content">Job content </string>
    <string name="deadline">Deadline</string>
</resources>
=======
<<<<<<< HEAD
<resources>
    <string name="app_name">TimeTable</string>
    <string name="timetable">Timetable</string>
    <string name="homework">Homework</string>
    <string name="input_homework">Press to add homework reminders!</string>
    <string name="me">Me</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thur.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>
    <string name="class_name">class name</string>
    <string name="classroom">classroom</string>
    <string name="week">week</string>
    <string name="class_time">class_time</string>
    <string name="teacher">teacher</string>
    <string name="add_another_time">add another time</string>
    <string name="month">Month</string>
    <string name="save">Save</string>
    <string name="back">Return</string>
    <string name="add">+</string>
    <string name="instruction">Input correct website!</string>
    <string name="open">Open the website</string>
    <string name="job_name">Job name </string>
    <string name="job_content">Job content </string>
    <string name="deadline">Deadline</string>
</resources>
=======
<resources>
    <string name="app_name">TimeTable</string>
    <string name="timetable">Timetable</string>
    <string name="homework">Homework</string>
    <string name="input_homework">Press to add homework reminders!</string>
    <string name="me">Me</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thur.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>
    <string name="class_name">class name</string>
    <string name="classroom">classroom</string>
    <string name="week">week</string>
    <string name="class_time">class_time</string>
    <string name="teacher">teacher</string>
    <string name="add_another_time">add another time</string>
    <string name="month">Month</string>
    <string name="save">Save</string>
    <string name="back">Return</string>
    <string name="add">+</string>
    <string name="instruction">Input correct website!</string>
    <string name="open">Open the website</string>
    <string name="job_name">Job name </string>
    <string name="job_content">Job content </string>
    <string name="deadline">Deadline</string>
</resources>
>>>>>>> 实现了一些动效和功能
>>>>>>> add some animation
