<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/p2"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:id="@+id/lay_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"

        >


        <Button
            android:id="@+id/btn_return"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:background="@drawable/setbar_bg_white"

            />

        <Button
            android:id="@+id/btn_add_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/setbar_bg_white"
            android:text="@string/app_name"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/setbar_bg_white"
            android:text="@string/save"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/lay_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <EditText
            android:id="@+id/classname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:background="@drawable/setbar_bg_opacity"
            android:text="@string/class_name"
             />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:id="@+id/classroom"
            android:text="@string/classroom"
            android:background="@drawable/setbar_bg_opacity"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/week"
            android:text="@string/week"
            android:paddingLeft="10dp"
            android:background="@drawable/setbar_bg_opacity"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:id="@+id/class_time"
            android:text="@string/class_time"
            android:background="@drawable/setbar_bg_opacity"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:id="@+id/teacher"
            android:text="@string/teacher"
            android:layout_marginBottom="20dp"
            android:background="@drawable/setbar_bg_opacity"
            />

        <Button
            android:id="@+id/add_another_time"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setbar_bg_blue"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/add_another_time"
            android:textColor="#03A9F4"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>